fix: careers page header vertical alignment
Fix Careers page header text contents not being aligned vertically
centered like the homepage, due to a greedy selector that is for
stretching the callout on the homepage to grow with the link list.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -638,7 +638,7 @@ main > .section.small-screen-cta-container > .grid-container:has(+ .call-to-acti
   }
 }
 
-.callout-container .grid-item,
+.callout-container .grid-item:has(.callout-wrapper),
 .card-container .grid-item,
 .card-container.grid-item {
   align-self: stretch;
